2002/05/09
  Klez filter (thanks to Robert Spier)

2002/04/20
  Bumped version number to 0.07

  Support comments in configuration files (prefix the line with #)
  
  Support RELAYCLIENT like qmail-smtpd (thanks to Marius Kjeldahl
  <marius@kjeldahl.net> and Zukka Zitting <jukka.zitting@iki.fi>)

  If the connection fails while in DATA we would just accept the
  message. Ouch! Thanks to Devin Carraway <qpsmtpd@devin.com> for the
  patch.


2002/01/26
  Allow [1.2.3.4] for the hostname when checking if the dns resolves


2002/01/21
  assorted fixes; getting dnsbl's to actually work

  fixing the maximum message size (databytes) stuff (thanks for the
  spot to Andrew Pam <xanni@glasswings.com.au>)

  support and enable taint checking (thanks to Devin Carraway
  <qpsmtpd@devin.com>)

  Make the MAIL FROM host dns check configurable. (thanks to Devin
  Carraway).

  Add more documentation to the README file.
  
