@@ -4,3 +4,13 @@ use constant TRACE => 10;
 
 
 1;
+
+
+=head1 NAME
+
+Qpsmtpd::Constants - Constants should be defined here
+
+=head1 SYNOPSIS
+
+Not sure if we are going to use this...
+
