@@ -5,7 +5,7 @@ use base qw(Qpsmtpd);
 sub start_connection {
     my $self = shift;
 
-    my $remote_host = $ENV{TCPREMOTEHOST} || "[$ENV{TCPREMOTEIP}]";
+    my $remote_host = $ENV{TCPREMOTEHOST} || ( $ENV{TCPREMOTEIP} ? "[$ENV{TCPREMOTEIP}]" : "[noip!]");
     my $remote_info = $ENV{TCPREMOTEINFO} ? "$ENV{TCPREMOTEINFO}\@$remote_host" : $remote_host;
     my $remote_ip   = $ENV{TCPREMOTEIP};
 
