@@ -7,7 +7,7 @@ sub start {
   my $proto = shift;
   my $class = ref($proto) || $proto;
   my %args = @_;
-  my $self = { _rcpt => [] };
+  my $self = { _rcpt => [], started => time };
   bless ($self, $class);
 }
 
@@ -17,13 +17,26 @@ sub add_header {
 
 sub add_recipient {
   my $self = shift;
+  @_ and push @{$self->{_recipients}}, shift;
+}
 
+sub recipients {
+  my $self = shift;
+  ($self->{_recipients} ? @{$self->{_recipients}} : ());
 }
 
 sub sender {
   my $self = shift;
   @_ and $self->{_sender} = shift;
   $self->{_sender};
+
+}
+
+sub add_header_line {
+
+}
+
+sub add_body_line {
 
 }
 
