@@ -1,3 +1,8 @@
+
+2002/07/03
+  First (non functional) version of the new object oriented mail engine.
+ 
+
 2002/05/09
   Klez filter (thanks to Robert Spier)
 
